--- a/packages/control/src/component-styles/AuthFormWrapper.module.css
+++ b/packages/control/src/component-styles/AuthFormWrapper.module.css
@@ -6,7 +6,7 @@
   /* margin-inline: 5%; */
   /* width: 100%;
   max-width: 720px; */
-  height: 100vh;
+  /* height: 100vh; */
   /* font-size: 15px; */
   /* transform: scale(0.95); */
   /* margin: 0 auto; */
@@ -15,7 +15,6 @@
   max-width: unset; */
   width: 100%;
   max-width: 600px;
-  justify-content: flex-start;
 }
 
 .FormWrapper {
@@ -232,7 +231,7 @@
 
 .btnContainer .btn:active {
   transform: scale(0.98);
-  box-shadow: 3px 2px 22px 1px #00000040;;
+  box-shadow: 3px 2px 22px 1px #00000040;
 }
 
 .btnContainer .btn:disabled {
